--- a/packages/backend/biome.json
+++ b/packages/backend/biome.json
@@ -2,6 +2,14 @@
   "extends": ["../../biome.json"],
   "files": {
     "maxSize": 10485760,
-    "ignore": ["cache/", "discovery/"]
+    "ignore": [
+      "cache/",
+      "discovery/**/.code",
+      "discovery/**/.code@*",
+      "discovery/**/.flat*",
+      "discovery/**/mermaid",
+      "discovery/**/.mermaid",
+      "discovery/**/.flat"
+    ]
   }
 }
