--- a/packages/backend/discovery/redstone/ethereum/config.jsonc
+++ b/packages/backend/discovery/redstone/ethereum/config.jsonc
@@ -5,7 +5,7 @@
   "initialAddresses": [
     "0x8f2428F7189c0d92D1c4a5358903A8c80Ec6a69D",
     "0x97A2dA87d3439b172e6DD027220e01c9Cb565B80",
-    "0x8f68E849eaf8EB943536F9d1D49Ea9C9b5868b98",
+    "0x8f68E849eaf8EB943536F9d1D49Ea9C9b5868b98"
   ],
   "names": {
     "0x8f2428F7189c0d92D1c4a5358903A8c80Ec6a69D": "SystemConfig",
@@ -15,40 +15,40 @@
     "0x592C1299e0F8331D81A28C0FC7352Da24eDB444a": "L1CrossDomainMessenger",
     "0x97A2dA87d3439b172e6DD027220e01c9Cb565B80": "DataAvailabilityChallenge",
     "0x8f68E849eaf8EB943536F9d1D49Ea9C9b5868b98": "DisputeGameFactory",
-    "0xE7d0fE72637B3C949cd81c63A4Ff1fb23feeF3b2": "PreimageOracle",
+    "0xE7d0fE72637B3C949cd81c63A4Ff1fb23feeF3b2": "PreimageOracle"
   },
   "overrides": {
     "OptimismPortal": {
       "ignoreMethods": ["isOutputFinalized"],
-      "ignoreInWatchMode": ["params"],
+      "ignoreInWatchMode": ["params"]
     },
     "L2OutputOracle": {
       "ignoreMethods": [
         "getL2OutputAfter",
         "getL2OutputIndexAfter",
         "getL2Output",
-        "computeL2Timestamp",
+        "computeL2Timestamp"
       ],
       "ignoreInWatchMode": [
         "nextBlockNumber",
         "nextOutputIndex",
         "latestBlockNumber",
-        "latestOutputIndex",
+        "latestOutputIndex"
       ],
       "fields": {
         "deletedOutputs": {
           "type": "stateFromEvent",
           "event": "OutputsDeleted",
-          "returnParams": ["prevNextOutputIndex", "newNextOutputIndex"],
-        },
-      },
+          "returnParams": ["prevNextOutputIndex", "newNextOutputIndex"]
+        }
+      }
     },
     "ProxyAdminOwner": {
-      "ignoreInWatchMode": ["nonce"],
+      "ignoreInWatchMode": ["nonce"]
     },
     "L1CrossDomainMessenger": {
       "ignoreMethods": ["xDomainMessageSender"],
-      "ignoreInWatchMode": ["messageNonce"],
+      "ignoreInWatchMode": ["messageNonce"]
     },
     "SystemConfig": {
       "fields": {
@@ -56,34 +56,34 @@
         "batcherHash": {
           "type": "call",
           "method": "function batcherHash() view returns (address)",
-          "args": [],
+          "args": []
         },
         "opStackDA": {
           "type": "opStackDA",
-          "sequencerAddress": "{{ batcherHash }}",
+          "sequencerAddress": "{{ batcherHash }}"
         },
         "sequencerInbox": {
           "type": "opStackSequencerInbox",
-          "sequencerAddress": "{{ batcherHash }}",
-        },
+          "sequencerAddress": "{{ batcherHash }}"
+        }
       },
-      "ignoreInWatchMode": ["scalar"],
+      "ignoreInWatchMode": ["scalar"]
     },
     "DisputeGameFactory": {
       "ignoreMethods": ["gameAtIndex"],
       "fields": {
         "gameImpls": {
           "type": "array",
-          "length": 5,
+          "length": 5
         },
         "initBonds": {
           "type": "array",
-          "length": 5,
-        },
-      },
+          "length": 5
+        }
+      }
     },
     "PreimageOracle": {
-      "ignoreMethods": ["zeroHashes"],
-    },
-  },
+      "ignoreMethods": ["zeroHashes"]
+    }
+  }
 }
