--- a/packages/backend/discovery/worldcoin/ethereum/config.jsonc
+++ b/packages/backend/discovery/worldcoin/ethereum/config.jsonc
@@ -11,50 +11,50 @@
     "0xFC1c26E964F791f81a33F49D91f79456891AA1c1": "RegisterVerifierSize600",
     "0xE44c83b9e1971A24EC698829297A0C4026B0CeF9": "RegisterVerifierSize1200",
     "0xCA7d6822b9c6913B1A1416cE30eF14c4e7f0bFb1": "DeleteVerifierSize10",
-    "0x43B68ccBa7FC726540768fD1537c3179283140ed": "DeleteVerifierSize100",
+    "0x43B68ccBa7FC726540768fD1537c3179283140ed": "DeleteVerifierSize100"
   },
   "overrides": {
     "WorldIdIdentityManager2": {
       "ignoreMethods": ["proxiableUUID", "queryRoot"],
-      "ignoreInWatchMode": ["latestRoot"],
+      "ignoreInWatchMode": ["latestRoot"]
     },
     "RegisterIdentitiesVerifierLookupTable": {
       "fields": {
         "additionalBatchSizes": {
           "type": "arrayFromOneEvent",
           "event": "event VerifierAdded(uint256 indexed batchSize, address indexed verifierAddress)",
-          "valueKey": "batchSize",
+          "valueKey": "batchSize"
         },
         "initialVerifiers": {
           "type": "array",
           "method": "getVerifierFor",
-          "indices": [10, 100],
+          "indices": [10, 100]
         },
         "additionalVerifiers": {
           "type": "array",
           "method": "getVerifierFor",
-          "indices": "{{ additionalBatchSizes }}",
-        },
-      },
+          "indices": "{{ additionalBatchSizes }}"
+        }
+      }
     },
     "DeleteIdentitiesVerifierLookupTable": {
       "fields": {
         "additionalBatchSizes": {
           "type": "arrayFromOneEvent",
           "event": "event VerifierDeleted(uint256 indexed batchSize, address indexed verifierAddress)",
-          "valueKey": "batchSize",
+          "valueKey": "batchSize"
         },
         "initialVerifiers": {
           "type": "array",
           "method": "getVerifierFor",
-          "indices": [10, 100],
+          "indices": [10, 100]
         },
         "additionalVerifiers": {
           "type": "array",
           "method": "getVerifierFor",
-          "indices": "{{ additionalBatchSizes }}",
-        },
-      },
-    },
-  },
+          "indices": "{{ additionalBatchSizes }}"
+        }
+      }
+    }
+  }
 }
