Fix discovery configs formatting

--- a/packages/backend/discovery/astarzkevm/ethereum/config.jsonc
+++ b/packages/backend/discovery/astarzkevm/ethereum/config.jsonc
@@ -53,7 +53,9 @@
         }
       }
     },
-    "Bridge": { "ignoreDiscovery": true },
+    "Bridge": {
+      "ignoreDiscovery": true
+    },
     "AstarValidiumDAC": {
       "fields": {
         "members": {
