--- a/packages/backend/discovery/polygonzkevm/ethereum/config.jsonc
+++ b/packages/backend/discovery/polygonzkevm/ethereum/config.jsonc
@@ -61,7 +61,9 @@
         }
       }
     },
-    "Bridge": { "ignoreDiscovery": true },
+    "Bridge": {
+      "ignoreDiscovery": true
+    },
     "wstETHBridge": {
       "ignoreRelatives": ["originTokenAddress", "wrappedTokenAddress"],
       "ignoreMethods": ["proxiableUUID", "getStETHByWstETH", "getWstETHByStETH"]
