--- a/packages/backend/discovery/xlayer/ethereum/config.jsonc
+++ b/packages/backend/discovery/xlayer/ethereum/config.jsonc
@@ -52,7 +52,9 @@
         }
       }
     },
-    "Bridge": { "ignoreDiscovery": true },
+    "Bridge": {
+      "ignoreDiscovery": true
+    },
     "XLayerValidiumDAC": {
       "fields": {
         "members": {
