--- a/packages/backend/discovery/across-v3/ethereum/config.jsonc
+++ b/packages/backend/discovery/across-v3/ethereum/config.jsonc
@@ -17,11 +17,13 @@
     "0x8692B776d1Ff0664177c90465038056Dc64f8991": "OptimisticGovernor",
     "0xE233009838CB898b50e0012a6E783FC9FeE447FB": "ZkSync_Adapter",
     "0x7Ea0D1882D610095A45E512B0113f79cA98a8EfE": "Linea_Adapter",
-    "0xAd1b0a86c98703fd5F4E56fff04F6b2D9b9f246F": "Optimism_Adapter",
-    "0x29528780E29abb8Af95a5e5a125b94766987543F": "Arbitrum_Adapter",
-    "0x2d8B1e2B0Dff62DF132d23BEa68a6D2c4D20046E": "Base_Adapter",
+    "0xb3a4e39F0CD9aBAc5d866f023C18e73224667Fee": "Optimism_Adapter",
+    "0xd881A21F17B83AefFd11cc2e7363740449eb8069": "Arbitrum_Adapter",
+    "0x8315177aB297bA92A06054cE80a67Ed4DBd7ed3a": "Arbitrum_Bridge",
+    "0x011B6E24FfB0B5f5fCc564cf4183C5BBBc96D515": "Arbitrum_Old_Bridge",
+    "0xD9948AE3405FE03A52A18F119EF72221DCdCc4df": "Base_Adapter",
     "0x33B0Ec794c15D6Cc705818E70d4CaCe7bCfB5Af3": "Boba_Adapter",
-    "0xB130E3056D5C692300d66c12C10ffA2073d9424D": "Polygon_Adapter"
+    "0xB130E3056D5C692300d66c12C10ffA2073d9424D": "Polygon_Adapter",
   },
   "overrides": {
     "HubPool": {
@@ -105,24 +107,29 @@
     },
     "Optimism_Adapter": {
       "ignoreRelatives": [
-        "dai",
-        "daiOptimismBridge",
-        "l1StandardBridge",
-        "l1Weth",
-        "messenger",
-        "snx",
-        "snxOptimismBridge"
+        "cctpTokenMessenger",
+        "DAI",
+        "DAI_OPTIMISM_BRIDGE",
+        "L1_STANDARD_BRIDGE",
+        "L1_WETH",
+        "MESSENGER",
+        "SNX",
+        "SNX_OPTIMISM_BRIDGE",
+        "usdcToken"
       ]
     },
     "Arbitrum_Adapter": {
       "ignoreRelatives": [
-        "l1ERC20GatewayRouter",
-        "l1Inbox",
-        "l2RefundL2Address"
+        "cctpTokenMessenger",
+        "L1_DAI",
+        "L1_ERC20_GATEWAY_ROUTER",
+        "L1_INBOX",
+        "L2_REFUND_L2_ADDRESS",
+        "usdcToken"
       ]
     },
     "Base_Adapter": {
-      "ignoreRelatives": ["l1StandardBridge", "l1Weth", "messenger"]
+      "ignoreRelatives": ["L1_STANDARD_BRIDGE", "L1_WETH", "MESSENGER", "usdcToken"]
     },
     "Boba_Adapter": {
       "ignoreRelatives": ["l1StandardBridge", "l1Weth", "messenger"]
@@ -146,6 +153,13 @@
     "OptimisticGovernor": {
       "ignoreMethods": ["getCurrentTime"],
       "ignoreRelatives": ["collateral"]
+    },
+    "Arbitrum_Bridge": {
+      "ignoreMethods": ["delayedInboxAccs", "sequencerInboxAccs"],
+      "ignoreRelatives": ["allowedOutboxList", "rollup", "sequencerInbox"]
+    },
+    "Arbitrum_Old_Bridge":{
+      "ignoreMethods": ["inboxAccs"],
     }
   }
 }
